welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:12: error: type mismatch;
 found   : Int
 required: String
a
^